--- a/Grpc.Server/Grpc.Server.csproj
+++ b/Grpc.Server/Grpc.Server.csproj
@@ -10,9 +10,13 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.52.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Grpc.JsonTranscoding" Version="7.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Grpc.Swagger" Version="0.3.5" />
   </ItemGroup>
 
   <ItemGroup>
-      <Protobuf Include="..\Grpc.Shared\Protos\greet.proto" Link="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="..\Grpc.Shared\Protos\greet.proto" Link="Protos\greet.proto" GrpcServices="Server" ProtoRoot="..\Grpc.Shared" />
   </ItemGroup>
+
 </Project>
